Feature/small improvements (#6) (#7)
* Updated version in build.gradle
* Moved examples to separate package. Removing dependency on Scala library for main code
* Updated Gradle version. Update gradle wrapper
* Fixed .gitattributes
* Simplification of code
* Merged Creator classes with Creator parameters classes
* Added tests; Renamed test classes to avoid confusion with generics parameters
* Updated examples
* Updated docs
* Small fixes